SNOW-937198 Use OpenJDK 11 and 17 images in Github Actions